--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
-version = '1.12.2-1.1.1a'
+version = '1.12.2-1.1.2'
 group = 'next.smileycorp.cosmeticwood' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'Cosmetic-Wood'
 
